<resources>
    <string name="app_name">Pet Finder</string>
    <string name="txtName">Name</string>
    <string name="txtEmail">Email Address</string>
    <string name="txtPhone">Phone number</string>
    <string name="txtDate">Date</string>
    <string name="txtTime">Time</string>
    <string name="txtComments">Comments or Questions</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
